Fixing large image issue on account page on safari (#262)

--- a/src/routes/profile/style.scss
+++ b/src/routes/profile/style.scss
@@ -95,6 +95,10 @@ $circle-size: 40px;
   background-color: #FFB145;
   padding: 20px;
   display: flex;
+
+  img {
+    width: 100%;
+  }
 }
 
 .colorPickerWrapper {
